--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http": "0.0.0",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.1",
+    "socket.io": "^2.1.0",
     "twit": "^2.2.9"
   }
 }
