--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Guillaume & Sanae",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.4.1",
     "ent": "^2.2.0",
     "express": "^4.16.3",
     "http": "0.0.0",
